replace and summary text fixes for ID

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Begin Jekyll SEO tag v2.5.0 -->
   <meta name="generator" content="Jekyll v3.7.4"/>
-  {% if page.summary %}
+  {% t page.summary %}
   <meta name="description" content="{{ page.summary | escape }}">
-  {% endif %}
   {%if page.tags %}
   <meta name="keywords" content="{{ page.tags | join: ', ' | escape }}"/>
   {%endif %}
