--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
                 <article class="post h-entry article">
 
                     <header class="post-header">
-                        <h1 class="post-title p-name">{{ page.title }}</h1>
+                        <h1 class="post-title p-name">{% t page.title %}</h1>
                     </header>
 
                     <div class="post-content e-content">
